--- a/K_Means_Clustering.ipynb
+++ b/K_Means_Clustering.ipynb
@@ -22,6 +22,7 @@
         "id": "_JUJDOMpiuE2"
       },
       "source": [
+        "from sklearn.clusters import KMeans # importing k-means \n",
         "import numpy as np # linear algebra\n",
         "import pandas as pd # data processing, CSV file\n",
         "import matplotlib.pyplot as plt # for data visualization\n",
